# DOZ

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_poc.sh  run_poc_server_18081.sh
UI Upgrade/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
UI Upgrade/src/: App.jsx  Layout.jsx  globals.css  pages.config.js
UI Upgrade/src/lib/: PageNotFound.jsx
UI Upgrade/src/pages/: AAR.jsx  About.jsx  Console.jsx
UI Upgrade/src/utils/: index.ts
docs/: ARCHITECTURE.md  PACKET_SPEC.md  RUN.md  WEB_UI.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_config.h  app_main.c  fusion_madgwick.c  fusion_madgwick.h  imu_icm20948.c  imu_icm20948.h  imu_mpu6050.c  imu_mpu6050.h  imu_select.h  net_udp.c  net_udp.h  packet_proto.c  packet_proto.h
firmware_arduino/: README.md
firmware_arduino/FDW_MPU6050_Node/: FDW_MPU6050_Node.ino
server/: __init__.py  config.py  logic.py  main.py  packet.py  state.py  world_sim.py
server/web/: app.js  index.html  style.css  view3d.html  view3d.js
tests/: test_logic.py  test_packet.py  test_state.py
tools/: __init__.py  calibration_helper.py  packet_inspector.py  sim_node.py
webapp/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  types.ts
webapp/src/components/: AlertsPanel.tsx  ArenaPanel.tsx  EventLogPanel.tsx  NavBar.tsx  PlayerListPanel.tsx  RecordingControls.tsx  StatusBar.tsx  TelemetryPanel.tsx  icons.tsx
webapp/src/hooks/: useConsoleData.ts
webapp/src/lib/: api.ts  exposure.ts  (+5 more)
(+15 files in other folders)
